# IE582-Final_Project

./: Progress Report Email.md  Project Proposal.md  Project proposal templete.md  Project proposal.md  README.md  pyproject.toml  runtime_command.txt
docs/: Evaluation Plan.md  Technical Design.md
scripts/: demo_pan_tilt_pipeline.py  demo_pipeline.py  mic_command_listener.py  pan_tilt_gazebo_pose_tracker.py  pan_tilt_gazebo_tracker.py  pan_tilt_socket_client.py  run_gazebo_test_tracker.sh  run_gazebo_test_world.sh
src/ie582_final_project/: __init__.py  command_parser.py  drive_controller.py  models.py  pan_tilt_controller.py  pan_tilt_pipeline.py  pipeline.py  runtime_inputs.py  target_selector.py  vision.py
src/ie582_final_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_command_parser.py  test_drive_controller.py  test_pan_tilt_controller.py  test_pan_tilt_pipeline.py  test_runtime_inputs.py  test_target_selector.py  test_vision.py
worlds/: pantilt_people_test.sdf
