[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ie582-final-project"
version = "0.1.0"
description = "Command-grounded multi-target prioritization and control scaffold for IE582"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Abhijeet Kadam" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
